Implement login and rsign up page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "lint": "npx stylelint **/*.{css,scss} --fix"
+    "lint": "npx stylelint **/*.{css,scss}"
   },
   "devDependencies": {
     "stylelint": "^13.13.1",
